# pipewright

./: .demo-script.sh  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
demo/: RESULTS.md
demo/express-api/: package.json
demo/express-api/src/: app.js  utils.js  utils.test.js
demo/go-server/: go.mod  handlers.go  handlers_test.go  main.go
demo/java-utils/src/: Utils.java  UtilsTest.java
demo/rust-cli/: Cargo.toml
demo/rust-cli/src/: lib.rs  main.rs
docs/: PLUGIN_GUIDE.md  USAGE_GUIDE.md
example/: utils.py
example/go/: go.mod  utils.go  utils_test.go
example/java/: Utils.java  UtilsTest.java
example/js/: package.json  utils.js  utils.test.js
example/python/: test_utils.py  utils.py
example/python/tests/: test_utils.py
example/ruby/: utils.rb  utils_spec.rb
example/rust/: Cargo.toml
example/rust/src/: lib.rs
example/rust/tests/: lib_tests.rs
example/ts/: package.json  utils.test.ts  utils.ts
plugins/code_review/: __init__.py  workflow.py
plugins/docs_gen/: workflow.py
plugins/issue_solve/: workflow.py
plugins/refactor/: workflow.py
plugins/test_gen/: workflow.py
src/pipewright/: __init__.py  cli.py  config.py  context.py  engine.py  session.py  workflow.py
src/pipewright/memory/: mcp_server.py  store.py
src/pipewright/observability/: display.py  hooks.py
src/pipewright/plugins/: loader.py
src/pipewright/plugins/debug/: workflow.py
src/pipewright/plugins/refactor/: __init__.py
src/pipewright/plugins/test_gen/: workflow.py
src/pipewright/providers/: __init__.py  anthropic.py  base.py  openai_compat.py  registry.py  tools.py  types.py
tests/: test_ci_setup.py  test_code_review.py  test_config.py  test_context.py  test_debug.py  test_display.py  test_docs_gen.py  test_engine_hardening.py  test_engine_provider.py  test_engine_unit.py  test_error_polish.py  test_example_utils.py  test_history.py  test_hooks.py  test_init_command.py  test_issue_solve.py  test_license_headers.py  test_memory_store.py  test_multi_language_examples.py  test_permissions.py  test_provider_anthropic.py  test_provider_openai_compat.py  test_provider_registry.py  test_provider_tools.py  test_provider_types.py  test_refactor.py  test_session.py  test_setup.py  test_structured_output.py  test_workflow_chaining.py
tests/python/: test_utils.py
