[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipewright"
version = "0.1.0"
description = "CLI-first, model-agnostic, plugin-based AI dev workflow automation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Gibran Rodriguez", email = "brangi000@gmail.com"}]

dependencies = [
    "claude-agent-sdk>=0.1.48",
    "click>=8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
# This makes `pipewright` available as a CLI command after `pip install`
pipewright = "pipewright.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["src"]
