[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipewright"
version = "0.3.1"
description = "CLI-first, model-agnostic, plugin-based AI dev workflow automation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Gibran Rodriguez", email = "brangi000@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "claude-agent-sdk>=0.1.48",
    "click>=8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
all = ["openai>=1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
# This makes `pipewright` available as a CLI command after `pip install`
pipewright = "pipewright.cli:main"

[project.urls]
Homepage = "https://github.com/brangi/pipewright"
Repository = "https://github.com/brangi/pipewright"
Issues = "https://github.com/brangi/pipewright/issues"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["src"]
